[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "TODO. Not intended for external use."
edition = "2021"
homepage = "https://slumber.lucaspickering.me"
keywords = ["rest", "http", "terminal", "tui"]
license = "MIT"
name = "resolve"
repository = "https://github.com/LucasPickering/slumber"
version = "2.1.0"
# Rely on parent for rust-version

[dependencies]
serde_yaml = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}

[package.metadata.release]
tag = false
