[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Command line interface for Slumber. Not intended for external use."
edition = "2021"
homepage = "https://slumber.lucaspickering.me"
keywords = ["rest", "http", "terminal", "tui"]
license = "MIT"
name = "slumber_cli"
repository = "https://github.com/LucasPickering/slumber"
version = "1.8.1"
# Rely on parent for rust-version

[dependencies]
anyhow = {workspace = true}
clap = {version = "4.4.2", features = ["derive"]}
dialoguer = {version = "0.11.0", default-features = false, features = ["password"]}
indexmap = {workspace = true}
itertools = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_yaml = {workspace = true}
slumber_config = {workspace = true}
slumber_core = {workspace = true}
tracing = {workspace = true}
