[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Core library for Slumber. Not intended for external use."
edition = "2021"
homepage = "https://slumber.lucaspickering.me"
keywords = ["rest", "http", "terminal", "tui"]
license = "MIT"
name = "slumber_core"
repository = "https://github.com/LucasPickering/slumber"
version = "2.0.0"
# Rely on parent for rust-version

[dependencies]
anyhow = "1.0.0"
async-trait = "0.1.81"
bytes = {workspace = true, features = ["serde"]}
chrono = {workspace = true, features = ["clock", "serde", "std"]}
derive_more = {workspace = true, features = ["debug", "deref", "deref_mut", "display", "from", "from_str"]}
dirs = "5.0.1"
futures = {workspace = true}
indexmap = {workspace = true, features = ["serde"]}
itertools = {workspace = true}
mime = "0.3.17"
openapiv3 = "2.0.0"
regex = {version = "1.10.5", default-features = false}
reqwest = {workspace = true, features = ["multipart", "rustls-tls", "rustls-tls-native-roots"]}
rmp-serde = "1.1.2"
rstest = {workspace = true, optional = true}
rusqlite = {version = "0.31.0", default-features = false, features = ["bundled", "chrono", "uuid"]}
rusqlite_migration = "1.2.0"
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
serde_json_path = "0.6.3"
serde_yaml = {workspace = true}
strum = {workspace = true, features = ["derive"]}
thiserror = "1.0.63"
tokio = {workspace = true, features = ["fs", "process"]}
tracing = "0.1.0"
url = {version = "2.0.0", features = ["serde"]}# Inherited from reqwest
uuid = {workspace = true, features = ["serde", "v4"]}
winnow = "0.6.16"

[dev-dependencies]
env-lock = "0.1.0"
pretty_assertions = {workspace = true}
proptest = "1.5.0"
proptest-derive = "0.5.0"
rstest = {workspace = true}
serde_test = {workspace = true}
wiremock = {version = "0.6.1", default-features = false}

[features]
test = ["dep:rstest"]

[package.metadata.release]
tag = false
