[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Terminal user interface for Slumber. Not intended for external use."
edition = "2021"
homepage = "https://slumber.lucaspickering.me"
keywords = ["rest", "http", "terminal", "tui"]
license = "MIT"
name = "slumber_tui"
repository = "https://github.com/LucasPickering/slumber"
version = "1.7.0"
# Rely on parent for rust-version

[dependencies]
anyhow = "^1.0.0"
bytesize = {version = "1.3.0", default-features = false}
chrono = {version = "^0.4.31", default-features = false}
cli-clipboard = "0.4.0"
crossterm = {version = "^0.27.0", features = ["event-stream"]}
derive_more = {version = "1.0.0-beta.6", features = ["debug", "deref", "deref_mut", "display", "from"]}
futures = "^0.3.28"
indexmap = {version = "^2.0.0", features = ["serde"]}
itertools = "^0.12.0"
notify = {version = "^6.1.1", default-features = false, features = ["macos_fsevent"]}
persisted = {version = "^0.1.0", features = ["serde"]}
ratatui = {version = "^0.26.0", features = ["serde", "unstable-rendered-line-info"]}
reqwest = {version = "^0.12.4", default-features = false}
serde = {version = "^1.0.188", features = ["derive"]}
serde_json = {version = "^1.0.0", default-features = false}
serde_json_path = "^0.6.3"
serde_yaml = {version = "^0.9.0", default-features = false}
slumber_core = {path = "../slumber_core", version = "1.7.0"}
strum = {version = "^0.26.0", default-features = false, features = ["derive"]}
tokio = {version = "^1.32.0", default-features = false, features = ["macros", "signal"]}
tracing = "^0.1.37"
uuid = {version = "^1.4.1", default-features = false, features = ["v4"]}

[dev-dependencies]
rstest = {version = "0.19.0", default-features = false}
serde_test = "1.0.176"
slumber_core = {path = "../slumber_core", features = ["test"]}
