[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Terminal user interface for Slumber. Not intended for external use."
edition = "2021"
homepage = "https://slumber.lucaspickering.me"
keywords = ["rest", "http", "terminal", "tui"]
license = "MIT"
name = "slumber_tui"
repository = "https://github.com/LucasPickering/slumber"
version = "1.7.0"
# Rely on parent for rust-version

[dependencies]
anyhow = {workspace = true}
bytesize = {workspace = true}
chrono = {workspace = true}
cli-clipboard = "0.4.0"
crossterm = {version = "0.27.0", features = ["event-stream"]}
derive_more = {workspace = true, features = ["debug", "deref", "deref_mut", "display", "from"]}
futures = {workspace = true}
indexmap = {workspace = true}
itertools = {workspace = true}
notify = {version = "6.1.1", default-features = false, features = ["macos_fsevent"]}
persisted = {version = "0.1.0", features = ["serde"]}
ratatui = {version = "0.26.0", features = ["serde", "unstable-rendered-line-info"]}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_json_path = {workspace = true}
serde_yaml = {workspace = true}
slumber_core = {path = "../slumber_core", version = "1.7.0"}
strum = {workspace = true}
tokio = {workspace = true, features = ["macros", "signal"]}
tracing = {workspace = true}
uuid = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}
serde_test = {workspace = true}
slumber_core = {path = "../slumber_core", features = ["test"]}
