[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Terminal user interface for Slumber. Not intended for external use."
edition = "2021"
homepage = "https://slumber.lucaspickering.me"
keywords = ["rest", "http", "terminal", "tui"]
license = "MIT"
name = "slumber_tui"
repository = "https://github.com/LucasPickering/slumber"
version = "1.8.1"
# Rely on parent for rust-version

[dependencies]
anyhow = {workspace = true}
chrono = {workspace = true}
cli-clipboard = "0.4.0"
crossterm = {workspace = true, features = ["bracketed-paste", "windows", "events", "event-stream"]}
derive_more = {workspace = true, features = ["debug", "deref", "deref_mut", "display", "from"]}
editor-command = "0.1.0"
futures = {workspace = true}
indexmap = {workspace = true}
itertools = {workspace = true}
notify = {version = "6.1.1", default-features = false, features = ["macos_fsevent"]}
persisted = {version = "0.3.1", features = ["serde"]}
ratatui = {workspace = true, features = ["crossterm", "underline-color", "unstable-widget-ref"]}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_json_path = {workspace = true}
serde_yaml = {workspace = true}
slumber_config = {workspace = true}
slumber_core = {workspace = true}
strum = {workspace = true}
tokio = {workspace = true, features = ["macros", "signal"]}
tracing = {workspace = true}
tree-sitter-highlight = "0.22.6"
tree-sitter-json = "0.21.0"
unicode-width = "0.1.13"
uuid = {workspace = true}

[dev-dependencies]
pretty_assertions = {workspace = true}
rstest = {workspace = true}
slumber_core = {workspace = true, features = ["test"]}

[package.metadata.release]
tag = false
