[package]
authors = {workspace = true}
description = "Template engine for Slumber. Not intended for external use."
edition = {workspace = true}
homepage = {workspace = true}
keywords = {workspace = true}
license = {workspace = true}
name = "slumber_template"
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace = true}

[dependencies]
bytes = {workspace = true, features = ["serde"]}
derive_more = {workspace = true, features = ["deref", "display", "from"]}
futures = {workspace = true}
indexmap = {workspace = true, features = ["serde"]}
itertools = {workspace = true}
regex = {version = "1.10.5", default-features = false}
schemars = {workspace = true, optional = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
slumber_util = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}
winnow = {workspace = true}

[dev-dependencies]
pretty_assertions = {workspace = true}
proptest = "1.5.0"
proptest-derive = "0.5.0"
rstest = {workspace = true}
serde_json = {workspace = true}
serde_test = {workspace = true}
slumber_util = {workspace = true, features = ["test"]}

[features]
schema = ["dep:schemars"]
test = ["slumber_util/test"]

[lints]
workspace = true

[package.metadata.release]
tag = false
