[package]
authors = {workspace = true}
description = "Terminal user interface for Slumber. Not intended for external use."
edition = {workspace = true}
homepage = {workspace = true}
keywords = {workspace = true}
license = {workspace = true}
name = "slumber_tui"
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace = true}

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
bytes = {workspace = true}
chrono = {workspace = true}
cli-clipboard = "0.4.0"
crossterm = {workspace = true, features = ["bracketed-paste", "windows", "events", "event-stream"]}
derive_more = {workspace = true, features = ["debug", "deref", "deref_mut", "display", "from"]}
editor-command = "1.0.0"
futures = {workspace = true}
indexmap = {workspace = true}
itertools = {workspace = true}
mime = {workspace = true}
notify = {version = "8.0.0", default-features = false, features = ["macos_fsevent"]}
notify-debouncer-full = {version = "0.5.0", default-features = false}
persisted = {version = "0.3.1", features = ["serde"]}
ratatui = {workspace = true, features = ["crossterm", "underline-color", "unstable-widget-ref"]}
reqwest = {workspace = true}
serde = {workspace = true}
serde_yaml = {workspace = true}
shell-words = "1.1.0"
slumber_config = {workspace = true}
slumber_core = {workspace = true}
slumber_util = {workspace = true}
strum = {workspace = true}
tokio = {workspace = true, features = ["macros", "signal", "tracing"]}
tokio-util = "0.7.13"
tracing = {workspace = true}
tree-sitter-highlight = "0.22.6"
tree-sitter-json = "0.21.0"
unicode-width = "0.1.13"
uuid = {workspace = true}

[dev-dependencies]
pretty_assertions = {workspace = true}
rstest = {workspace = true}
serde_json = {workspace = true}
slumber_core = {workspace = true, features = ["test"]}
wiremock = {workspace = true}

[package.metadata.release]
tag = false
